# nycu_dl

./: README.md
binary_segmentation/: .gitignore  Makefile  pyproject.toml  report.txt  requirements.txt
binary_segmentation/src/: __init__.py  constants.py  evaluate.py  inference.py  oxford_pet.py  train.py  types.py  utils.py
binary_segmentation/src/models/: __init__.py  models.py  resnet34_unet.py  unet.py
diffusion/: .gitignore  pyproject.toml  requirements.txt
diffusion/conf/: config.yaml  sample.yaml
diffusion/conf/model/: default.yaml
diffusion/conf/train/: default.yaml
diffusion/notebooks/: kaggle_train.ipynb  visualize_scheduler.ipynb
diffusion/src/: config.py  evaluate.py  evaluator.py  iclevr_dataset.py  infer.py  noise_scheduler.py  sample.py  train.py  utils.py
diffusion/src/ddpm/: layers.py  unet.py
diffusion/src/model/: layers.py
drl/: .gitignore  cartpole_best.pt  main.py  pyproject.toml  requirements.txt
drl/cloud/: colab_training.ipynb  double_dqn_multi_step.ipynb  dqn_pong_training.ipynb
drl/eval_videos/: task2_evaluation_results.txt
drl/scripts/: eval-task1.sh  uv_export.sh
drl/src/: cart_pole.py  dqn.py  original_dqn.py  preprocessor.py  prioritized_replay.py  replay.py  task1.py  task2.py  task3.py  test_cartpole.py  test_model.py  test_pong.py
drl/src/ablation/: cartpole_classic.py  cartpole_double_dqn.py  ddqn.py  ddqn_per.py
drl/testers/: eval_pong.py  test_cartpole.py  test_model.py  test_pong.py
