[project]
name = "drl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium>=1.3.0",
    "imageio>=2.37.3",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pytest>=9.0.3",
    "torch>=2.11.0",
    "wandb>=0.26.1",
]
